--- a/eTickets/Views/Movies/Index.cshtml
+++ b/eTickets/Views/Movies/Index.cshtml
@@ -15,10 +15,8 @@
                             <p class="card-text">
                                 <h5 class="card-title">
                                     @item.Name
-                                    @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
-                                    {
-                                        <a class="text-white float-right" asp-action="Edit" asp-route-id="@item.Id"><i class="bi bi-pencil-square"></i></a>
-                                    }
+                                       <a class="text-white float-right"><i class="bi bi-pencil-square"></i></a>
+                                    
                                 </h5>
                             </p>
                         </div>
@@ -57,11 +55,7 @@
                                 <a class="btn btn-outline-primary float-right" asp-action="Details" asp-route-id="@item.Id">
                                     <i class="bi bi-eye-fill"></i> Show Details
                                 </a>
-                                <a class="btn btn-success text-white @((DateTime.Now > item.EndDate) ? "disabled" : "")" 
-                                   asp-controller="Orders" 
-                                   asp-action="AddItemToShoppingCart" 
-                                   asp-route-id="@item.Id">
-                                <i class="bi bi-cart-plus"></i> Add to Cart (Price @item.Price.ToString("c"))</a>
+                                <a class="btn btn-success text-white"><i class="bi bi-cart-plus"></i> Add to Cart(Price @item.Price.ToString("c") </a>
                             </p>
                         </div>
                     </div>
@@ -70,5 +64,3 @@
         </div>
     }
 </div>
-
-@await Html.PartialAsync("_CreateItem", "Movies") 
