--- a/eTickets/Views/Cinemas/Index.cshtml
+++ b/eTickets/Views/Cinemas/Index.cshtml
@@ -1,10 +1,11 @@
 ﻿@model IEnumerable<Cinema>
-@{
-    ViewData["Title"] = "list of Cinemas";
-}
-<div class ="row">
 
-    <div class="col-md-8 offset-1-md-2">
+@{
+    ViewData["Title"] = "List of Cinemas";
+}
+
+<div class="row">
+    <div class="col-md-8 offset-md-2">
 
         <table class="table">
             <thead>
@@ -12,40 +13,42 @@
                     <th>@Html.DisplayNameFor(model => model.Logo)</th>
                     <th>@Html.DisplayNameFor(model => model.Name)</th>
                     <th>@Html.DisplayNameFor(model => model.Description)</th>
-                    <th>Actions</th>
-                </tr>
-
+                    @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                    {
+                        <th>Actions</th>
+                    }
+                    </tr>
             </thead>
-             <tbody>
-            @foreach(var item in Model)
-            {
+            <tbody>
+                @foreach (var item in Model)
+                {
                 <tr>
                     <td class="align-middle">
-                        <img class ="rounded-circle" src="@item.Logo" alt="@item.Name" style="max-width:150px">
+                        <img class="rounded-circle" src="@item.Logo" alt="@item.Name" style="max-width: 150px" />
                     </td>
                     <td class="align-middle">
-                        @Html.DisplayFor(modelItem=> item.Name)
-
+                        @Html.DisplayFor(modelItem => item.Name)
                     </td>
                     <td class="align-middle">
-                        @Html.DisplayFor(modelItem=> item.Description)
-
+                        @Html.DisplayFor(modelItem => item.Description)
                     </td>
-                    <td class="align-middle">
-                        <a class="btn btn-outline-primary"><i class="bi bi-pencil-square"></i>Edit</a>      
-                        
-                        <a class="btn btn-outline-info"><i class="bi bi-eye"></i>Details</a>   
-                        
-                        <a class="btn btn-danger"><i class="bi bi-trash"></i>Delete</a>   
-                    </td>
-                 </tr>
-            }
-            
+                    @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                    {
+                        <td class="align-middle">
+                            <a class="btn btn-outline-primary" asp-action="Edit" asp-route-id="@item.Id"><i class="bi bi-pencil-square"></i>Edit </a> |
+                            <a class="btn btn-outline-info" asp-action="Details" asp-route-id="@item.Id"><i class="bi bi-eye"></i>Details </a> |
+                            <a class="btn btn-danger text-white" asp-action="Delete" asp-route-id="@item.Id"><i class="bi bi-trash"></i>Delete </a>
+                        </td>
+                    }
+                    </tr>
+                }
             </tbody>
 
         </table>
-    </div> 
 
-
-
+    </div>
+</div>
+</div>
+      <div style="position:fixed; right:25px; bottom:25px;" class ="text-white">
+    <a asp-controller="Cinemas" asp-action="Create" class="btn btn-success"><i class="bi bi-plus-circle"></i>Add new</a>
 </div>
